--- a/src/views/IEalert.ejs
+++ b/src/views/IEalert.ejs
@@ -1,7 +1,7 @@
 <div class='alert alert-danger' style='display: none' role='alert' id='iealert'>
     <h4 class='alert-heading'>
         <i class='fa fa-exclamation-triangle'></i>
-        Internet Explorer is not supported.
+        Internet Explorer는 지원되지 않습니다
     </h4>
-    <div>Please use newer (and better) browsers such as Firefox or Chrome.</div>
+    <div>파이어폭스나 크롬과 같은 최신 브라우저로 접속하여 주세요.</div>
 </div>
