--- a/src/views/pages/category.ejs
+++ b/src/views/pages/category.ejs
@@ -1,4 +1,4 @@
-<p><%= category.count %> pages found.</p>
+<p>페이지 <%= category.count %>개를 찾았습니다.</p>
 <ul>
     <% category.rows.forEach((r) => { %>
         <li>
