--- a/src/views/pages/viewcount.ejs
+++ b/src/views/pages/viewcount.ejs
@@ -1,11 +1,11 @@
-<p>Following list shows the 30 most viewed pages of the day.</p>
+<p>오늘 가장 많이 조회된 문서 30개입니다.</p>
 <div style='overflow-x: auto'>
     <table class="table">
         <thead>
             <tr>
                 <th scope='col'>#</th>
-                <th scope='col'>Page name</th>
-                <th scope='col'>Views</th>
+                <th scope='col'>문서명</th>
+                <th scope='col'>조회수</th>
             </tr>
         </thead>
         <tbody>
