--- a/src/views/threads/RecentDiscuss.ejs
+++ b/src/views/threads/RecentDiscuss.ejs
@@ -1,15 +1,15 @@
 <div style='float:right'>
-    <a class='btn btn-primary' href='/RecentDiscuss?isopen=true' role='button'>Open</a>
-    <a class='btn btn-secondary' href='/RecentDiscuss?isopen=false' role='button'>Closed</a>
+    <a class='btn btn-primary' href='/RecentDiscuss?isopen=true' role='button'>열린 토론</a>
+    <a class='btn btn-secondary' href='/RecentDiscuss?isopen=false' role='button'>닫힌 토론</a>
 </div>
 <div style='clear:both'></div>
 <div style='overflow-x: auto'>
     <table class="table">
         <thead>
             <tr>
-                <th scope='col'>Thread name</th>
-                <th scope='col'>Page name</th>
-                <th scope='col'>Date</th>
+                <th scope='col'>토론명</th>
+                <th scope='col'>문서명</th>
+                <th scope='col'>일시</th>
             </tr>
         </thead>
         <tbody>
