--- a/src/public/css/rcsidebar.css
+++ b/src/public/css/rcsidebar.css
@@ -4,6 +4,7 @@
     position: relative;
     width: 250px;
     margin-top: 75px;
+    margin-bottom: 12px;
     word-break: break-all;
 }
 .rcTitle
