--- a/src/views/admin/hiderev.ejs
+++ b/src/views/admin/hiderev.ejs
@@ -5,7 +5,7 @@
         <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
         <div class='form-group mb-2'>
             <div class='row'>
-                <label for='pgInputbox' class='col-sm-2'>Page name</label>
+                <label for='pgInputbox' class='col-sm-2'>문서명</label>
                 <div class='col-sm-10'>
                     <input type='text' name='pagename' class='form-control' id='pgInputbox' required>
                 </div>
