--- a/src/views/files/delete.ejs
+++ b/src/views/files/delete.ejs
@@ -1,13 +1,13 @@
 <form action='/deletefile/<%= title %>' method='POST' class='editForm'>
     <div class="form-group mt-2 mb-2 row">
         <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
-        <label for='comment' class='col-sm-1 col-form-label sr-only'>Comment</label>
+        <label for='comment' class='col-sm-1 col-form-label sr-only'>편집 요약</label>
         <div class="col-sm-11">
             <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="Max 255 characters">
         </div>
     </div>
     <div class="form-group mt-2 mb-2 row">
-    <span>Would you like to delete <%= title %>? <span class='text-danger fw-bold'>THIS CANNOT BE UNDONE!</span></span>
+    <span><%= title %>를 삭제하시겠습니까? <span class='text-danger fw-bold'>이 작업은 되돌릴 수 없습니다!</span></span>
     </div>
-    <button type='submit' type='button' class='btn btn-primary mt-3'>Delete</button>
+    <button type='submit' type='button' class='btn btn-primary mt-3'>삭제</button>
 </form>
