--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -1,6 +1,15 @@
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<meta name='mobile-web-app-capable' content='yes'>
+<meta name='generator' content='AkariEngine'>
+<meta name='application-name' content='GECWiki'>
+<meta name='theme-color' content='#7aa7d6'>
+<meta http-equv='x-ua-compatible' content='ie=edge'>
 <meta name='google' content='notranslate'>
+<meta name='googlebot' content='noarchive'>
+<link rel='copyright' href='//creativecommons.org/licenses/by-sa/4.0/'>
+<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js" integrity="sha512-72WD92hLs7T5FAXn3vkNZflWG6pglUDDpm87TeQmfSg8KnrymL2G30R7as4FmTwhgu9H7eSzDCX3mjitSecKnw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
