--- a/src/views/pages/delete.ejs
+++ b/src/views/pages/delete.ejs
@@ -1,13 +1,13 @@
 <form action='/delete/<%= title %>' method='POST' class='editForm'>
     <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
     <div class="form-group mt-2 mb-2 row">
-        <label for='comment' class='col-sm-1 col-form-label sr-only'>Comment</label>
-        <div class="col-sm-11">
-            <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="Max 255 characters">
+        <label for='comment' class='col-sm-2 col-form-label'>편집 요약</label>
+        <div class="col-sm-10">
+            <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="최대 255자">
         </div>
     </div>
     <div class="form-group mt-2 mb-2 row">
-    <span>Would you like to delete <%= title %>? <span class='text-danger fw-bold'>THIS CANNOT BE UNDONE!</span></span>
+    <span><%= title %>를 삭제하시겠습니까? <span class='text-danger fw-bold'>이 작업은 되돌릴 수 없습니다!</span></span>
     </div>
-    <button type='submit' type='button' class='btn btn-primary mt-3'>Delete</button>
+    <button type='submit' type='button' class='btn btn-primary mt-3'>삭제</button>
 </form>
