--- a/src/views/pages/move.ejs
+++ b/src/views/pages/move.ejs
@@ -1,14 +1,14 @@
 <form action='/move/<%= originalName %>' method='POST' class='editForm'>
     <div class="form-group mt-2 mb-2 row">
-        <label for='comment' class='col-sm-1 col-form-label'>Move</label>
-        <div class="col-sm-11">
-            <input class="form-control" id='originalName' maxlength=255 name='originalName' type="text" placeholder="Max 255 characters" value='<%= originalName %>' disabled readonly>
+        <label for='comment' class='col-sm-2 col-form-label'>원 문서명</label>
+        <div class="col-sm-10">
+            <input class="form-control" id='originalName' maxlength=255 name='originalName' type="text" placeholder="최대 255자" value='<%= originalName %>' disabled readonly>
         </div>
     </div>
     <div class="form-group mt-2 mb-2 row">
-        <label for='newName' class='col-sm-1 col-form-label'>To</label>
-        <div class="col-sm-11">
-            <input class="form-control" id='newName' maxlength=255 name='newName' type="text" placeholder="Max 255 characters">
+        <label for='newName' class='col-sm-2 col-form-label'>이동할 문서명</label>
+        <div class="col-sm-10">
+            <input class="form-control" id='newName' maxlength=255 name='newName' type="text" placeholder="최대 255자">
         </div>
     </div>
     <div class='mt-2 mb-2'>
@@ -22,7 +22,7 @@
         <small class='form-text text-muted'>For spam protection, please type <b>four</b> characters shown above.</small>
     </div>
     <% if (locals.username === undefined) { %>
-    <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone.</p>
+    <p><span class='text-danger fw-bold'>경고!</span>    비로그인 상태로 편집하면 IP가 영구히 기록되어 공개됩니다.</p>
     <% } %>
-    <button type='submit' type='button' class='btn btn-primary mt-3'>Move</button>
+    <button type='submit' type='button' class='btn btn-primary mt-3'>이동</button>
 </form>
