--- a/src/views/pages/pagelist.ejs
+++ b/src/views/pages/pagelist.ejs
@@ -1,4 +1,4 @@
-There are <%= count %> pages.
+문서 <%= count %>개가 있습니다.
 <ul>
     <% for(let i = 0; i < count; i++) { %>
         <li><a href='/w/<%= pages[i].title %>'><%= pages[i].title %></a></li>
