--- a/src/views/threads/thread.ejs
+++ b/src/views/threads/thread.ejs
@@ -7,9 +7,9 @@
 <div id='thread'>
 </div>
 <textarea class="form-control" id="commentBox" name="content" style='height: 150px'></textarea>
-<button id ='btnSubmit' class="btn btn-primary mt-3">Send</button>
+<button id ='btnSubmit' class="btn btn-primary mt-3">보내기</button>
 <% if (locals.username === undefined) { %>
-<p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone. (비로그인 상태로 당신의 IP 주소가 영구히 기록되어 공개될 것입니다.)</p>
+<p><span class='text-danger fw-bold'>경고!</span>    비로그인 상태로 토론에 참여하면 IP가 영구히 기록되어 공개됩니다.</p>
 <% } %>
 <% if (isAdmin) { %>
 <hr>
