--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -6,11 +6,11 @@
             <input type='text' name='id' class='form-control' id='idInputbox'placeholder='Enter ID' required>
         </div>
         <div class='form-group mb-2'>
-            <label for='passwordInputbox'>Password</label>
+            <label for='passwordInputbox'>비밀번호</label>
             <input type='password' name='password' class='form-control' id='passwordInputbox'placeholder='Enter Password' required>
         </div>
-        <div class='mb-2'>Do not have an account? <a href='/signup'>Create one!</a></div>
-        <div class='mb-2'>If you forgot your password, please <a href='mailto:<%= global.conf.adminEmail %>'>email to the Administrator</a>.</div>
+        <div class='mb-2'>계정이 없나요? <a href='/signup'>지금 만드세요!</a></div>
+        <div class='mb-2'>비밀번호를 까먹었다면 <a href='mailto:<%= global.conf.adminEmail %>'>관리자에게 이메일을 보내 주세요</a>.</div>
         <button type='submit' class='btn btn-primary'>Login</button>
     </form>
 </div>
