--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -8,6 +8,7 @@
 <meta name='google' content='notranslate'>
 <meta name='googlebot' content='noarchive'>
 <link rel='copyright' href='//creativecommons.org/licenses/by-sa/4.0/'>
+<% if (locals.canonical) { %><link rel="canonical" href="<%= global.conf.address %><%= locals.canonical %>"><% } %>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js" integrity="sha512-72WD92hLs7T5FAXn3vkNZflWG6pglUDDpm87TeQmfSg8KnrymL2G30R7as4FmTwhgu9H7eSzDCX3mjitSecKnw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
