--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=<%= global.conf.mapKey %>"></script>
+<link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/nanumgothic.css">
 <link rel='stylesheet' href='/css/mainview.css'>
 <link rel='stylesheet' href='/css/ren.css'>
 <link rel='stylesheet' href='/css/rcsidebar.css'>
