--- a/src/public/css/mainview.css
+++ b/src/public/css/mainview.css
@@ -1,7 +1,7 @@
 body
 {
     background-color: #f5f5f5;
-    font-family: "Apple SD Gothic Neo", 나눔고딕, NanumGothic, "Noto Sans CJK KR", "Noto Sans KR", "Noto Sans", 맑은고딕, "Malgun Gothic", arial, sans-serif;
+    font-family: "Apple SD Gothic Neo", 나눔고딕, 'Nanum Gothic', NanumGothic, "Noto Sans CJK KR", "Noto Sans KR", "Noto Sans", 맑은고딕, "Malgun Gothic", arial, sans-serif;
 }
 .article-wrapper
 {
